// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActiveWork root className characterisation > CoChangeChip > renders the Default story unchanged 1`] = `
[
  [
    "co-change-chip",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "gap-1",
      "p-2.5",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > CoChangeChip > renders the WeakPair story unchanged 1`] = `
[
  [
    "co-change-chip",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "gap-1",
      "p-2.5",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > FileHistoryExplorer > renders the Default story unchanged 1`] = `
[
  [
    "cn-root",
    [
      "gap-3.5",
    ],
  ],
  [
    "co-change-chip",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "gap-1",
      "p-2.5",
    ],
  ],
  [
    "file-activity-detail",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "flex-1",
      "gap-4",
      "p-4",
    ],
  ],
  [
    "file-activity-row",
    [
      "relative",
      "gap-1.5",
      "rounded-md",
      "px-3",
      "py-2",
    ],
  ],
  [
    "file-activity-row-accent",
    [
      "absolute",
      "bottom-2",
      "left-0",
      "top-2",
      "w-[3px]",
      "rounded-r-[3px]",
      "bg-brand-primary",
    ],
  ],
  [
    "file-list-pane",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "w-[420px]",
      "p-2",
    ],
  ],
  [
    "growth-well",
    [
      "gap-2",
      "rounded-lg",
      "p-3",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
  [
    "spark-bars",
    [
      "flex-row",
      "items-end",
    ],
  ],
  [
    "spark-bars-bar-0",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-1",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-10",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-11",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-2",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-3",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-4",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-5",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-6",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-7",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-8",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-9",
    [
      "rounded-t-[1px]",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > FileHistoryExplorer > renders the NetShrinkSelected story unchanged 1`] = `
[
  [
    "cn-root",
    [
      "gap-3.5",
    ],
  ],
  [
    "co-change-chip",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "gap-1",
      "p-2.5",
    ],
  ],
  [
    "file-activity-detail",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "flex-1",
      "gap-4",
      "p-4",
    ],
  ],
  [
    "file-activity-row",
    [
      "relative",
      "gap-1.5",
      "rounded-md",
      "px-3",
      "py-2",
    ],
  ],
  [
    "file-activity-row-accent",
    [
      "absolute",
      "bottom-2",
      "left-0",
      "top-2",
      "w-[3px]",
      "rounded-r-[3px]",
      "bg-brand-primary",
    ],
  ],
  [
    "file-list-pane",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "w-[420px]",
      "p-2",
    ],
  ],
  [
    "growth-well",
    [
      "gap-2",
      "rounded-lg",
      "p-3",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
  [
    "spark-bars",
    [
      "flex-row",
      "items-end",
    ],
  ],
  [
    "spark-bars-bar-0",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-1",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-10",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-11",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-2",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-3",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-4",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-5",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-6",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-7",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-8",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-9",
    [
      "rounded-t-[1px]",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > FileHistoryExplorer > renders the NoCoChanges story unchanged 1`] = `
[
  [
    "cn-root",
    [
      "gap-3.5",
    ],
  ],
  [
    "file-activity-detail",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "flex-1",
      "gap-4",
      "p-4",
    ],
  ],
  [
    "file-activity-row",
    [
      "relative",
      "gap-1.5",
      "rounded-md",
      "px-3",
      "py-2",
    ],
  ],
  [
    "file-activity-row-accent",
    [
      "absolute",
      "bottom-2",
      "left-0",
      "top-2",
      "w-[3px]",
      "rounded-r-[3px]",
      "bg-brand-primary",
    ],
  ],
  [
    "file-list-pane",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "w-[420px]",
      "p-2",
    ],
  ],
  [
    "growth-well",
    [
      "gap-2",
      "rounded-lg",
      "p-3",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
  [
    "spark-bars",
    [
      "flex-row",
      "items-end",
    ],
  ],
  [
    "spark-bars-bar-0",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-1",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-10",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-11",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-2",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-3",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-4",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-5",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-6",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-7",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-8",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-9",
    [
      "rounded-t-[1px]",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > FileHistoryExplorer > renders the SingleFile story unchanged 1`] = `
[
  [
    "cn-root",
    [
      "gap-3.5",
    ],
  ],
  [
    "file-activity-detail",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "flex-1",
      "gap-4",
      "p-4",
    ],
  ],
  [
    "file-activity-row",
    [
      "relative",
      "gap-1.5",
      "rounded-md",
      "px-3",
      "py-2",
      "bg-surface-overlay",
    ],
  ],
  [
    "file-activity-row-accent",
    [
      "absolute",
      "bottom-2",
      "left-0",
      "top-2",
      "w-[3px]",
      "rounded-r-[3px]",
      "bg-brand-primary",
    ],
  ],
  [
    "file-list-pane",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "w-[420px]",
      "p-2",
    ],
  ],
  [
    "growth-well",
    [
      "gap-2",
      "rounded-lg",
      "p-3",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
  [
    "spark-bars",
    [
      "flex-row",
      "items-end",
    ],
  ],
  [
    "spark-bars-bar-0",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-1",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-2",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-3",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-4",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-5",
    [
      "rounded-t-[1px]",
    ],
  ],
  [
    "spark-bars-bar-6",
    [
      "rounded-t-[1px]",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > InitiativeCard > renders the Backburner story unchanged 1`] = `
[
  [
    "cn-root",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "w-[326px]",
      "gap-2.5",
      "p-4",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > InitiativeCard > renders the Default story unchanged 1`] = `
[
  [
    "cn-root",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "w-[326px]",
      "gap-2.5",
      "p-4",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > InitiativeCard > renders the NoOpenTasks story unchanged 1`] = `
[
  [
    "cn-root",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "w-[326px]",
      "gap-2.5",
      "p-4",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > PortfolioOverview > renders the Default story unchanged 1`] = `
[
  [
    "cn-root",
    [
      "gap-5",
    ],
  ],
  [
    "initiative-card",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "w-[326px]",
      "gap-2.5",
      "p-4",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
  [
    "portfolio-stat",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "min-w-[150px]",
      "flex-1",
      "p-4",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > PortfolioOverview > renders the NoOpenWork story unchanged 1`] = `
[
  [
    "cn-root",
    [
      "gap-5",
    ],
  ],
  [
    "initiative-card",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "w-[326px]",
      "gap-2.5",
      "p-4",
    ],
  ],
  [
    "page-surface",
    [
      "min-h-screen",
      "p-6",
    ],
  ],
  [
    "portfolio-stat",
    [
      "rounded-lg",
      "overflow-hidden",
      "relative",
      "min-w-[150px]",
      "flex-1",
      "p-4",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > SessionListItem > renders the AdHoc story unchanged 1`] = `
[
  [
    "page-surface",
    [
      "min-h-screen",
      "w-72",
      "p-6",
    ],
  ],
  [
    "session-list-item",
    [
      "relative",
      "gap-1",
      "rounded-md",
      "px-3",
      "py-2",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > SessionListItem > renders the Default story unchanged 1`] = `
[
  [
    "page-surface",
    [
      "min-h-screen",
      "w-72",
      "p-6",
    ],
  ],
  [
    "session-list-item",
    [
      "relative",
      "gap-1",
      "rounded-md",
      "px-3",
      "py-2",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > SessionListItem > renders the Selected story unchanged 1`] = `
[
  [
    "page-surface",
    [
      "min-h-screen",
      "w-72",
      "p-6",
    ],
  ],
  [
    "session-list-item",
    [
      "relative",
      "gap-1",
      "rounded-md",
      "px-3",
      "py-2",
      "bg-surface-raised",
    ],
  ],
  [
    "session-list-item-accent",
    [
      "absolute",
      "bottom-2",
      "left-0",
      "top-2",
      "w-[3px]",
      "rounded-r-[3px]",
      "bg-brand-primary",
    ],
  ],
]
`;

exports[`ActiveWork root className characterisation > SessionListItem > renders the Short story unchanged 1`] = `
[
  [
    "page-surface",
    [
      "min-h-screen",
      "w-72",
      "p-6",
    ],
  ],
  [
    "session-list-item",
    [
      "relative",
      "gap-1",
      "rounded-md",
      "px-3",
      "py-2",
    ],
  ],
]
`;
